# arxiv_cli

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  README_CN.md  __init__.py  cli.py  pyproject.toml  release_notes.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
arxiv_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
commands/: api.py  config.py  docs.py  find.py  paper.py  query.py  search.py  workflow.py
core/: __init__.py  client.py  config_store.py  feed.py  io.py  output.py  paths.py  registry.py
local/: README.md  q1.json  q2.json  q3.json  q4.json  q5.json  q6.json  q7.json  search_run_01.json  search_run_02.json  search_run_03.json  search_run_04.json  search_run_05.json  search_run_06.json  search_run_07.json  search_run_08.json  search_run_09.json
local/state/: last_request_at.txt  test_last_request_at.txt
resources/api_inventory/: API_DOCUMENTATION.md  api_inventory.json  api_inventory.md  api_inventory_complete.json
resources/api_inventory/_raw/: docs_access.html  docs_basics.html  docs_manual.html  docs_terms.html
resources/api_inventory/endpoints/api/query/: endpoint.json  endpoint.md
resources/api_inventory/endpoints/api/query/examples/GET/: README.md  file_io_command.txt  file_output.xml  input.json  parameter_command.txt  print_result.xml  summary_output.json
resources/api_inventory/endpoints/api/query/examples/POST/: README.md  file_io_command.txt  file_output.xml  input.json  parameter_command.txt  summary_output.json
resources/api_inventory/reports/: ENDPOINT_CLI_EXAMPLES.md  endpoint_cli_examples_summary.json  endpoint_test_results.json  endpoint_test_results.md
resources/docs/commands/: README.md
resources/docs/commands/api/: README.md
resources/docs/commands/config/: README.md
resources/docs/commands/docs/: README.md
resources/docs/commands/find/papers/: README.md
resources/docs/commands/paper/get/: README.md
resources/docs/commands/query/run/: README.md
resources/docs/commands/search/query/: README.md
resources/docs/commands/search/raw/: README.md
resources/docs/commands/workflow/: README.md
scripts/: refresh_api_inventory.py
tests/: test_cli_smoke.py  test_client.py
workflow/: workflow_graph.md
workflow/nodes/A_config_and_rate_limit/: node.md
workflow/nodes/A_配置与速率限制/: node.md
workflow/nodes/B_search_and_rank/: node.md
workflow/nodes/B_检索查询/: node.md
workflow/nodes/C_fetch_by_id_or_query/: node.md
workflow/nodes/C_单篇与批量拉取/: node.md
workflow/nodes/D_review_local_docs/: node.md
workflow/nodes/D_本地文档复核/: node.md
