[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arxiv-cli"
version = "0.1.0"
description = "Agent-first arXiv API CLI with bundled command documentation and workflow notes."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "wiz" },
]
license = { file = "LICENSE" }
keywords = ["arxiv", "cli", "api", "research", "metadata"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "requests>=2.31",
]

[project.scripts]
arxiv = "arxiv_cli.cli:main"

[project.urls]
Homepage = "https://github.com/untuitivist/arxiv_cli"
Repository = "https://github.com/untuitivist/arxiv_cli"
Issues = "https://github.com/untuitivist/arxiv_cli/issues"
Documentation = "https://github.com/untuitivist/arxiv_cli#readme"
Author = "https://github.com/untuitivist"

[tool.setuptools]
packages = ["arxiv_cli", "arxiv_cli.commands", "arxiv_cli.core"]

[tool.setuptools.package-dir]
arxiv_cli = "."

[tool.setuptools.package-data]
arxiv_cli = [
    "resources/api_inventory/**/*.md",
    "resources/api_inventory/**/*.json",
    "resources/api_inventory/**/*.txt",
    "resources/api_inventory/**/*.html",
    "resources/api_inventory/**/*.xml",
    "resources/docs/**/*.md",
    "resources/docs/**/*.json",
    "workflow/**/*.md",
    "local/**/*.md",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
